--- a/snake.html
+++ b/snake.html
@@ -5,6 +5,7 @@
     <title>Title</title>
 </head>
 <body>
+    <div id="score">0</div>
     <canvas id="gc" width="400" height="400"></canvas>
     <script type="text/javascript" src="snake.js"></script>
 </body>
